@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.15
 
+  *) mod_proxy_http, mod_proxy_connect: Add 'proxy-status' and
+     'proxy-source-port' request notes for logging. PR 30195. [Stefan Fritsch]
+
   *) configure: Enable ldap modules in 'all' and 'most' selections if ldap
      is compiled into apr-util. [Stefan Fritsch]
 
